@@ -1,3 +1,13 @@
+2008-01-22  Ross Burton  <ross@burtonini.com>
+
+	* libjuicer/sj-metadata-musicbrainz.c:
+	Look for album titles with "(disc X)" in and extract the disc number.
+
+	* src/sj-main.c:
+	Update the UI from the disk number if it is set.
+
+	#510439, thanks to Matthew Martin.
+
 2008-01-21  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-extracting.c:
